--- a/confirm-email.html
+++ b/confirm-email.html
@@ -31,7 +31,7 @@
                             <a href="forgot-password.html" class="btn btn-block btn-primary">Konfirmasi</a>
                         </div>
                         <div class="text-center mb-3">
-                            Sudah punya akun? <a href="register.html" class="sign-up text">Daftar</a>
+                            Sudah punya akun? <a href="login.html" class="sign-up text">Masuk</a>
                         </div>
                     </form>
                 </div>
