--- a/forgot-password.html
+++ b/forgot-password.html
@@ -35,7 +35,7 @@
                             <a href="forgot-password.html" class="btn btn-block btn-primary">Konfirmasi</a>
                         </div>
                         <div class="text-center mb-3">
-                            Sudah punya akun? <a href="register.html" class="sign-up text">Daftar</a>
+                            Sudah punya akun? <a href="login.html" class="sign-up text">Masuk</a>
                         </div>
                     </form>
                 </div>
