--- a/forgot-password.html
+++ b/forgot-password.html
@@ -32,7 +32,7 @@
                             <input type="text" class="form-control" placeholder="Masukkan konfirmasi password baru">
                         </div>
                         <div class="form-group">
-                            <a href="forgot-password.html" class="btn btn-block btn-primary">Konfirmasi</a>
+                            <a href="login.html" class="btn btn-block btn-primary">Konfirmasi</a>
                         </div>
                         <div class="text-center mb-3">
                             Sudah punya akun? <a href="login.html" class="sign-up text">Masuk</a>
