--- a/register.html
+++ b/register.html
@@ -24,6 +24,16 @@
                     </div>
                     <form action="#" method="post">
                         <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">Travel</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Sarkes</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="">Nama Instansi</label>
                             <input type="text" class="form-control" placeholder="Masukkan Nama Instansi">
                         </div>
