--- a/checkout.html
+++ b/checkout.html
@@ -26,30 +26,30 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav ml-auto mr-3">
-                    <li class="nav-item mx-md-2">
-                        <a href="index.html" class="nav-link">Beranda</a>
-                    </li>
-                    <li class="nav-item mx-md-2">
-                        <a href="#" class="nav-link">Servis</a>
-                    </li>
-                    <li class="nav-item mx-md-2">
-                        <a href="hospital-list.html" class="nav-link active">Rumah Sakit</a>
-                    </li>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav ml-auto mr-3">
+                        <li class="nav-item mx-md-2">
+                            <a href="index.html" class="nav-link active">Beranda</a>
+                        </li>
+                        <li class="nav-item mx-md-2">
+                            <a href="#" class="nav-link">Servis</a>
+                        </li>
+                        <li class="nav-item mx-md-2">
+                            <a href="hospital-list.html" class="nav-link">Rumah Sakit</a>
+                        </li>
+    
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
+                                Fadlan Naufal
+                            </a>
+                            <div class="dropdown-menu">
+                                <a href="profile.html" class="dropdown-item">Profile</a>
+                                <a href="login.html" class="dropdown-item">Keluar</a>
+                            </div>
+                        </li>
+                    </ul>
                     
-                </ul>
-                <form action="login.html" class="form-inline d-sm-block d-md-none">
-                    <button class="btn btn-login my-2 my-sm-0">
-                        Masuk
-                    </button>
-                </form>
-                <!-- For Web -->
-                <form action="login.html" class="form-inline my-2 my-lg-0 d-none d-md-block">
-                    <button class="btn btn-login btn-navbar-right my-2 my-sm-0 px-4">
-                        Masuk
-                    </button>
-                </form>
-            </div>
+                </div>
         </nav>
     </div>
     <!-- End Navbar -->
