--- a/pesanan.html
+++ b/pesanan.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ml-auto mr-3">
                     <li class="nav-item mx-md-2">
-                        <a href="index.html" class="nav-link ">Beranda</a>
+                        <a href="index.html" class="nav-link">Beranda</a>
                     </li>
                     <li class="nav-item mx-md-2">
                         <a href="#" class="nav-link">Servis</a>
@@ -36,8 +36,15 @@
                     <li class="nav-item mx-md-2">
                         <a href="hospital-list.html" class="nav-link">Rumah Sakit</a>
                     </li>
-                    <li class="nav-item mx-md-2">
-                        <a href="profile.html" class="nav-link active">Fadlan Naufal</a>
+
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle active" id="navbardrop" data-toggle="dropdown">
+                            Fadlan Naufal
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="profile.html" class="dropdown-item">Profile</a>
+                            <a href="login.html" class="dropdown-item">Keluar</a>
+                        </div>
                     </li>
                 </ul>
                 
