--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
                                   </div>
                             </div>
                             <div class="col">
-                                <button class="btn btn-block btn-primary">Daftar</button>
+                                <a href="login.html" class="btn btn-block btn-primary">Daftar</a>
                             </div>
                         </div>
                         <div class="text-center mb-3">
