--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 text-right">
-                        <a href="#" class="view-all-hospital">Lihat Semua >></a>
+                        <a href="hospital-list.html" class="view-all-hospital">Lihat Semua >></a>
                     </div>
                 </div>
             </div>
