--- a/hospital-list.html
+++ b/hospital-list.html
@@ -34,7 +34,7 @@
                         <a href="#" class="nav-link">Servis</a>
                     </li>
                     <li class="nav-item mx-md-2">
-                        <a href="hospital-list.html" class="nav-link">Rumah Sakit</a>
+                        <a href="hospital-list.html" class="nav-link">Sarana Kesehatan</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -61,7 +61,7 @@
         <section class="section-banner row">
             <div class="container">
                 <h2 class="select-hospital">Pengecekan Kesehatan lebih Mudah</h2>
-                <p class="select-hospital-p">Karena tersedia berbagai macam rumah sakit di banyak daerah</p>
+                <p class="select-hospital-p">Karena tersedia berbagai macam sarana kesehatan di banyak daerah</p>
                 <form action="#" method="post">
                     <div class="form-group row pt-2">
                         <div class="col-4">
@@ -76,7 +76,7 @@
                         </div>
                         <div class="col-8">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Cari Rumah Sakit" aria-label="Cari Rumah Sakit" aria-describedby="basic-addon2">
+                                <input type="text" class="form-control" placeholder="Cari Sarana Kesehatan" aria-label="Cari Sarana Kesehatan" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                   <button class="btn btn-search-hospital" type="button">Cari</button>
                                 </div>
@@ -88,7 +88,7 @@
         </section>
         <section class="section-hospital-list">
             <div class="container">
-               <h2 class="title-banner">Pilih Rumah Sakit</h2>
+               <h2 class="title-banner">Pilih Sarana Kesehatan</h2>
                <div class="row">
                    <div class="col-12 pt-2 pb-4">
                        <div class="card-hospital-list d-flex">
@@ -100,7 +100,7 @@
                                     <div class="hospital-detail">
                                         <div class="hospital-name">RSUD Ciawi</div>
                                         <div class="hospital-city">Ciawi, Bogor</div>
-                                        <div class="hospital-desc"> RSUD Ciawi atau Rumah Sakit Umum Daerah RSUD Ciawi adalah sebuah rumah sakit yang terletak di Kabupaten Bogor, Jawa Barat.RSUD Ciawi adalah rumah sakit umum yang berada dibawah otoritas Pemerintah KabupatenBogor.</div>
+                                        <div class="hospital-desc"> RSUD Ciawi atau Sarana Kesehatan Umum Daerah RSUD Ciawi adalah sebuah sarana kesehatan yang terletak di Kabupaten Bogor, Jawa Barat.RSUD Ciawi adalah sarana kesehatan umum yang berada dibawah otoritas Pemerintah KabupatenBogor.</div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-2">
