--- a/pesanan.html
+++ b/pesanan.html
@@ -34,7 +34,7 @@
                         <a href="#" class="nav-link">Servis</a>
                     </li>
                     <li class="nav-item mx-md-2">
-                        <a href="hospital-list.html" class="nav-link">Rumah Sakit</a>
+                        <a href="hospital-list.html" class="nav-link">Sarana Kesehatan</a>
                     </li>
 
                     <li class="nav-item dropdown">
