--- a/login.html
+++ b/login.html
@@ -15,40 +15,51 @@
 </head>
 
 <body class="bg-login">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row justify-content-center">
-            <div class="col-5">
-                <div class="card-login justify-content-center">
-                    <div class="text-center">
-                        <img src="frontend/images/logo swabku.png" alt="" class="img-login">
+            <div class="col-10">
+                <div class="card-login row justify-content-center">
+                    <div class="col-sm-12 col-md-6 login-img text-center">
+                        <img src="frontend/images/login-banner.png" class="login-banner" alt="">
                     </div>
-                    <form action="#" method="post">
-                        <div class="form-group">
-                            <label for="">Email</label>
-                            <input type="text" class="form-control" placeholder="Masukkan email">
+                    <div class="col-sm-12 col-md-6 login-form justify-content-center">
+                        <div class="text-center">
+                            <img src="frontend/images/logo swabku.png" alt="" class="login-logo">
                         </div>
-                        <div class="form-group">
-                            <label for="">Password</label>
-                            <input type="password" class="form-control" placeholder="Masukkan password">
+                        <div class="login-header mb-2">
+                            <h2 class="title-header">Selamat Datang </h2>
+                            <p class="subtitle-header"> Masuk untuk mendapatkan akses</p>
                         </div>
-                        <div class="form-group">
-                            <a href="confirm-email.html" class="sign-up text" style="padding-left: 3px;">Lupa kata sandi</a>
-                        </div>
-                        <div class="form-group row pt-2 pb-2">
-                            <div class="col">
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                    <label class="custom-control-label" for="customCheck1">Ingat Saya</label>
-                                  </div>
+                        <form action="" method="POST">
+                            <div class="form-group">
+                                <label for="">Email</label>
+                                <input type="text" class="form-control">
                             </div>
-                            <div class="col">
-                                <a href="index.html" class="btn btn-block btn-primary">Masuk</a>
+                            <div class="form-group">
+                                <label for="">Password</label>
+                                <input type="password" class="form-control">
                             </div>
-                        </div>
-                        <div class="text-center mb-3">
-                            Tidak punya akun? <a href="register.html" class="sign-up text">Daftar</a>
-                        </div>
-                    </form>
+                            <div class="mb-3 mt-3">
+                                <a href="confirm-email.html" class="sign-up text">Lupa Kata Sandi</a>
+                            </div>
+                            <div class="form-group mb-3">
+                                <div class="form-row">
+                                    <div class="col">
+                                        <div class="custom-control custom-checkbox">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                            <label class="custom-control-label" for="customCheck1">Ingat Saya</label>
+                                          </div>
+                                    </div>
+                                    <div class="col">
+                                        <a href="index.html" class="btn btn-block btn-primary">Masuk</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center mt-3">
+                                Tidak punya akun? <a href="register.html" class="sign-up text">Daftar</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
