--- a/register.html
+++ b/register.html
@@ -15,59 +15,47 @@
 </head>
 
 <body class="bg-login">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row justify-content-center">
-            <div class="col-5">
-                <div class="card-login justify-content-center">
-                    <div class="text-center">
-                        <img src="frontend/images/logo swabku.png" alt="" class="img-login">
+            <div class="col-10">
+                <div class="card-login row justify-content-center">
+                    <div class="col-sm-12 col-md-6 login-img text-center">
+                        <img src="frontend/images/login-banner.png" class="login-banner" alt="">
                     </div>
-                    <form action="#" method="post">
-                        <div class="form-group">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">Travel</label>
+                    <div class="col-sm-12 col-md-6 login-form justify-content-center">
+                        <div class="login-header mb-2">
+                            <h2 class="title-header">Daftar</h2>
+                            <p class="subtitle-header"> Silahkan mendaftar untuk mendapatkan akses</p>
+                        </div>
+                        <form action="" method="POST">
+                            <div class="form-group">
+                                <label for="">Nama Lengkap</label>
+                                <input type="text" class="form-control">
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">Sarkes</label>
+                            <div class="form-group">
+                                <label for="">No. HP</label>
+                                <input type="number" class="form-control">
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="">Nama Instansi</label>
-                            <input type="text" class="form-control" placeholder="Masukkan Nama Instansi">
-                        </div>
-                        <div class="form-group">
-                            <label for="">Nama Lengkap</label>
-                            <input type="text" class="form-control" placeholder="Masukkan Nama Lengkap">
-                        </div>
-                        <div class="form-group">
-                            <label for="">Nomor HP</label>
-                            <input type="number" class="form-control" placeholder="Masukkan Nomor HP">
-                        </div>
-                        <div class="form-group">
-                            <label for="">Email</label>
-                            <input type="text" class="form-control" placeholder="Masukkan email">
-                        </div>
-                        <div class="form-group">
-                            <label for="">Password</label>
-                            <input type="password" class="form-control" placeholder="Masukkan password">
-                        </div>
-                        <div class="form-group row pt-2 pb-2">
-                            <div class="col">
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                    <label class="custom-control-label" for="customCheck1">Ingat Saya</label>
-                                  </div>
+                            <div class="form-group">
+                                <label for="">Email</label>
+                                <input type="text" class="form-control">
                             </div>
-                            <div class="col">
-                                <a href="login.html" class="btn btn-block btn-primary">Daftar</a>
+                            <div class="form-group">
+                                <label for="">Password</label>
+                                <input type="password" class="form-control">
                             </div>
-                        </div>
-                        <div class="text-center mb-3">
-                            Sudah punya akun? <a href="login.html" class="sign-up text">Masuk</a>
-                        </div>
-                    </form>
+                            <div class="form-group mb-3">
+                                <div class="form-row">
+                                    <div class="col">
+                                        <a href="index.html" class="btn btn-block btn-primary">Daftar</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center mt-3">
+                                Sudah punya akun? <a href="login.html" class="sign-up text">Masuk</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
